--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,9 @@ proguard/
 # Android Studio Navigation editor temp files
 .navigation/
 
+#.DS_Store
+
+
 # Android Studio captures folder
 captures/
 
